# project-kafka

./: README.md  pyproject.toml
kafka-consumer/: kafka-consumer.py
kafka-marketing-project/: docker-compose.yml
kafka-marketing-project/consumer/: Dockerfile  consumer.py
kafka-marketing-project/dashboard/: Dockerfile  dashboard.py
kafka-marketing-project/producer/: producer.py
kafka-producer/: kafka-producer.py
