[tool.poetry]
name = "project-kafka"
version = "0.1.0"
description = ""
authors = ["Luiz Miranda <luiz.miranda@link2go.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.5.0"
python-dotenv = "^1.0.1"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
